# src/main/java/com/bnm/personservice/entity/Individual.java
@@ -2,41 +2,42 @@ package com.bnm.personservice.entity;
 
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
 import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.OneToOne;
 import jakarta.persistence.Table;
-import java.time.LocalDateTime;
 import java.util.UUID;
-import lombok.Data;
-import org.hibernate.annotations.CreationTimestamp;
-import org.hibernate.annotations.UpdateTimestamp;
+import lombok.Getter;
+import lombok.Setter;
+import org.hibernate.annotations.GenericGenerator;
 
-@Data
 @Entity
 @Table(name = "individuals", schema = "person")
-public class Individual {
-    @Id
-    @GeneratedValue(strategy = GenerationType.UUID)
-    private UUID id;
+@Getter
+@Setter
+public class Individual extends BaseEntity {
 
-    @OneToOne
-    @JoinColumn(name = "user_id", unique = true)
-    private User user;
+  @Id
+  @GeneratedValue(generator = "UUID")
+  @GenericGenerator(
+      name = "UUID",
+      strategy = "org.hibernate.id.UUIDGenerator"
+  )
+  @Column(name = "id", updatable = false, nullable = false)
+  private UUID id;
 
-    @CreationTimestamp
-    private LocalDateTime created;
+  @OneToOne(fetch = FetchType.LAZY)
+  @JoinColumn(name = "user_id", unique = true)
+  private User user;
 
-    @UpdateTimestamp
-    private LocalDateTime updated;
+  @Column(name = "passport_number", length = 32)
+  private String passportNumber;
 
-    @Column(name = "passport_number")
-    private String passportNumber;
+  @Column(name = "phone_number", length = 32)
+  private String phoneNumber;
 
-    @Column(name = "phone_number")
-    private String phoneNumber;
-
-    private String email;
+  @Column(name = "email", length = 32)
+  private String email;
 } 
